0.1.5
Added 'Clear tool output first' option to external tools prefs. 
Changed example tool 'Comment Selection' to take advantage of the $KKEDIT_SOURCE_LANG env var.
Pass highlighting language to external tools, "%l" placeholder and $KKEDIT_SOURCE_LANG env var.
Spell check menus no longer shown if no language packs installed or other aspell problems.
Set Edit->Cut/copy/Paste sensitive.
Added redo all.
Added undo all.

0.1.4
Fixed 'New Admin Editor' not running as new process.
Fixed segfault when trying to open file without read permissions.
Added switch to ./configure to set directory of installed Qt5 docs ( default "/usr/share/doc/qt5" ).
Set the title of the docviewer correctly.
Cleaned the docviewer code.
Added a "Find API In Qt5 Docs" entry box to toolbar.
Fixed minor bug when selecting "Search In Gtk Docs" from 'Navigation' menu when no selection.
Added "Search In Qt5 Docs" to 'Navigation' menu.
Added "Search In Qt5 Docs" to context menu.
Removed QT Search from external tools.
Fixed compile error when using --disable-docviewer
Minor fix to root style.

0.1.3
Automatically chooses the 'Root Source' style when using a root window if the style has not been set.
Added a 'Root' gtksourcestyle for using a root editor.
Added 'Remove All Bookmarks' to bookmark menu.
Tweaked a few external tools to take advantage of the new 'View Output' option.
Entry's now sorted in 'Tools' menu and 'Manage External Tools' drop down.
Fixed a couple of tools.
Added 'Show/Hide Tool Output' to 'View' menu.
Added a 'View Output' option to tool flags.
Changed 'Toggle' in 'View' menu to 'Show/Hide'.
Fixed 'Functions' menu sorting changes to reflect prefs immediately.
Fixed 'Functions' menu not being updated on save.
Added 'Categorised' submenus to 'Functions' menu sorting.
Added Function list sorting to prefs.

0.1.2
Redone help files.
Removed unnecessary options from prefs.
Removed 'Show BM Bar' from prefs ( now automatic ).